--- a/quiz-tv/package.json
+++ b/quiz-tv/package.json
@@ -6,15 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.26.2",
-    "lucide-react": "^0.562.0",
-    "next": "16.1.2",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
+  "framer-motion": "^12.26.2",
+  "lucide-react": "^0.562.0",
+  "next": "16.1.2",
+  "react": "18.3.1",
+  "react-dom": "18.3.1"
+},
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
